# internal/api.go
@@ -1,41 +1,0 @@
-/*
- * Open DAM API
- *
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * API version: 0.0.0
- * Generated by: OpenAPI Generator (https://openapi-generator.tech)
- */
-
-package opendam
-
-import (
-	"net/http"
-)
-
-
-// DefaultApiRouter defines the required methods for binding the api requests to a responses for the DefaultApi
-// The DefaultApiRouter implementation should parse necessary information from the http request, 
-// pass the data to a DefaultApiServicer to perform the required actions, then write the service results to the http response.
-type DefaultApiRouter interface { 
-	DeleteAsset(http.ResponseWriter, *http.Request)
-	GetAsset(http.ResponseWriter, *http.Request)
-	GetAssets(http.ResponseWriter, *http.Request)
-	GetJob(http.ResponseWriter, *http.Request)
-	PostAsset(http.ResponseWriter, *http.Request)
-	PutAsset(http.ResponseWriter, *http.Request)
-}
-
-
-// DefaultApiServicer defines the api actions for the DefaultApi service
-// This interface intended to stay up to date with the openapi yaml used to generate it, 
-// while the service implementation can ignored with the .openapi-generator-ignore file 
-// and updated with the logic required for the API.
-type DefaultApiServicer interface { 
-	DeleteAsset(string) (interface{}, error)
-	GetAsset(string) (interface{}, error)
-	GetAssets() (interface{}, error)
-	GetJob(string) (interface{}, error)
-	PostAsset() (interface{}, error)
-	PutAsset(string) (interface{}, error)
-}
